# learning-haskell

./: AltParsing.hs  Anamorphism.hs  Arith4.hs  BiFunctor.hs  BinaryTree.hs  Bind.hs  Capitalize.hs  Chapter10.hs  Cipher.hs  Compose.hs  ConstructingValues.hs  DList.hs  Database.hs  DeconstructingValues.hs  DoesItCheck.hs  EitherUtils.hs  Fractions.hs  HeavyLifting.hs  HuttonRazor.hs  Ini.hs  IntegerParser.hs  Learn.hs  LearnParsers.hs  ListMonad.hs  LogParser.hs  Marau.hs  Marshalling.hs  MaybeMonad.hs  MaybeUtils.hs  MonadTransformers.hs  MonadTransformersTwo.hs  Mult.hs  MyOwnStd.hs  Naturals.hs  NewType.hs  Operations.hs  Patternmatching.hs  Phone.hs  PhoneParser.hs  Poly.hs  (+36 more)
Applicatives/: Constant.hs  FixerUpper.hs  Identity.hs  Lookups.hs  MaybeApplicative.hs
applicative/: applicative.cabal  hie.yaml  package.yaml
applicative/app/: Main.hs
applicative/src/: Apl1.hs  Combos.hs  Four.hs  ListApplicative.hs  Pair.hs  Person.hs  Three.hs  Two.hs  Validation.hs
applicative/test/: Spec.hs
foldable/: foldable.cabal  hie.yaml  package.yaml
foldable/src/: Constant.hs  Four.hs  Identity.hs  LibraryFunctions.hs  Option.hs  Three.hs  Two.hs
functor/: functor.cabal  hie.yaml  package.yaml
functor/src/: Flip.hs  (+18 more)
monads/: hie.yaml  monads.cabal  package.yaml
morra/: morra.cabal
scotty-count/: README.md  scotty-count.cabal  stack.yaml
scottyboy/: LICENSE  README.md  scottyboy.cabal  stack.yaml
scottyboy/.stack-work/: stack.sqlite3
semigroup/: hie.yaml  package.yaml  semigroup.cabal
traversable/: ChangeLog.md  hie.yaml  package.yaml  traversable.cabal
(+48 files in other folders)
